# CiCTrie

./: .gitignore
code/: CMakeLists.txt  benchmark.sh  makefile  run.sh  valgrind.sh
code/inc/: common.h  ctrie.h  hazard_pointer.h  nodes.h  parser.h
code/scala/benchmark/: build.sbt
code/scala/benchmark/src/main/scala/: Main.scala
code/scripts/: generate_numbers.py  stats.py  stats_hp.py  stats_vs_scala.py
code/src/: common.c  ctrie.c  hazard_pointer.c  hazard_pointer.h  main.c
docs/: proposal.tex
docs/Article/: article.tex
docs/Report/: report.tex
